Remove text-indent from paragraph styles for improved layout flexibility

--- a/src/components/Paragraph.astro
+++ b/src/components/Paragraph.astro
@@ -193,7 +193,7 @@ const typeMetadata = `type:${type}`;
         line-height: 1.8;
         word-spacing: normal;
         display: inline;
-        text-indent: 6.5em;
+        /* text-indent: 6.5em; */
     }
 
     /* Global styles for Pali words (will be applied by JavaScript) */
